[gd_scene format=3 uid="uid://cj5u4tcmht4vk"]

[ext_resource type="Script" uid="uid://b0v3rbktebcig" path="res://cards/test_card_logic.gd" id="1_logic"]
[ext_resource type="PackedScene" uid="uid://boe2uckodyftt" path="res://cards/card.tscn" id="2_card"]

[node name="TestCardLogic" type="Node2D" unique_id=2009313548]
script = ExtResource("1_logic")

[node name="BG" type="ColorRect" parent="." unique_id=1036357270]
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0.211765, 0.239216, 0.290196, 1)

[node name="Card" parent="." unique_id=122613922 instance=ExtResource("2_card")]
position = Vector2(576, 324)

[node name="DebugUI" type="CanvasLayer" parent="." unique_id=1575845092]

[node name="PanelContainer" type="PanelContainer" parent="DebugUI" unique_id=1680196468]
offset_left = 20.0
offset_top = 20.0
offset_right = 260.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI/PanelContainer" unique_id=2121305032]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="DebugUI/PanelContainer/VBoxContainer" unique_id=1609365126]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="DebugUI/PanelContainer/VBoxContainer" unique_id=956117972]
layout_mode = 2

[node name="BtnStart" type="Button" parent="DebugUI/PanelContainer/VBoxContainer" unique_id=1374715678]
layout_mode = 2
text = "Force Start (3s)"

[node name="BtnStop" type="Button" parent="DebugUI/PanelContainer/VBoxContainer" unique_id=61196208]
layout_mode = 2
text = "Force Stop"
